2014-02-12  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/opt/pr52727.C: Compile with -march=i686 for ia32.

2014-02-12  Thomas Schwinge  <thomas@codesourcery.com>

	* c-c++-common/raw-string-3.c: Fix typo in dg-error invocation.

	* gcc.dg/cilk-plus/jump-openmp.c: New file.

2014-02-12  Richard Biener  <rguenther@suse.de>

	PR middle-end/60092
	* gcc.dg/torture/pr60092.c: New testcase.
	* gcc.dg/tree-ssa/alias-31.c: Disable SRA.

2014-02-12  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20140212-1.c: New test.

2014-02-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60047
	* g++.dg/cpp0x/pr60047.C: New.

2014-02-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/60101
	* c-c++-common/pr60101.c: New test.

2014-02-11  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/59468
	* g++.dg/ipa/devirt-27.C: New testcase.
	* g++.dg/ipa/devirt-26.C: New testcase.

2014-02-11  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/60137
	* gcc.target/powerpc/pr60137.c: New file.

2014-02-11  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/52370
	* gfortran.dg/pr52370.f90: New test.

2014-02-11  Uros Bizjak  <ubizjak@gmail.com>

	PR target/59927
	Revert
	2013-12-15  Uros Bizjak  <ubizjak@gmail.com>

	PR testsuite/58630
	* gcc.target/i386/pr43662.c (dg-options):
	Add -maccumulate-outgoing-args.
	* gcc.target/i386/pr43869.c (dg-options): Ditto.
	* gcc.target/i386/pr57003.c (dg-options): Ditto.
	* gcc.target/i386/avx-vzeroupper-16.c (dg-options):
	Remove -mtune=generic and add -maccumulate-outgoing-args instead.
	* gcc.target/i386/avx-vzeroupper-17.c (dg-options): Ditto.
	* gcc.target/i386/avx-vzeroupper-18.c (dg-options): Ditto.
	* gcc.target/x86_64/abi/callabi/func-1.c (dg-options):
	Add -maccumulate-outgoing-args.
	* gcc.target/x86_64/abi/callabi/func-2a.c (dg-options): Ditto.
	* gcc.target/x86_64/abi/callabi/func-2b.c (dg-options): Ditto.
	* gcc.target/x86_64/abi/callabi/func-indirect.c (dg-options): Ditto.